# hg-setup

./: .gitlab-ci.yml  .hgignore  .hgtags  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml
.github/: debug_which_hg.py  remove_old_mercurial.py
.github/workflows/: ci.yml
src/hg_setup/: __init__.py  completion.py  hgrcs.py  init_app.tcss  init_cmd.py  init_tui.py
tests/: test_init.py  test_init_shell_completion.py  test_init_tui.py  test_version.py
