[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "hg-setup"
version = "0.1.0"
description = "Helper for setting up and configuring Mercurial"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
dependencies = ["click", "textual"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[project.scripts]
hg-setup = "hg_setup:main"


[tool.pdm]
distribution = true
